Refactoring of z-index (fixed)

--- a/src/assets/css/Common.css
+++ b/src/assets/css/Common.css
@@ -5,7 +5,6 @@ body, html, button{
     margin:0;
     padding:0;
     box-sizing: border-box;
-    z-index: 5;
 }
 a {
     text-decoration: none;
